# podclaw

./: .gitignore  LICENSE  README.md  podclaw.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: all_formats.py  basic_config.py  custom_script.py
podclaw/: __init__.py  cli.py  config.py  generator.py  script.py  subtitles.py  tts.py  video.py
tests/: test_cli.py  test_config.py  test_script.py  test_subtitles.py
